[gd_scene load_steps=6 format=3 uid="uid://w602wvjtyrk0"]

[ext_resource type="Script" uid="uid://dml2efy33uev4" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_myx47"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kukqi"]
bg_color = Color(0.811837, 0.811837, 0.811837, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5d2l8"]
bg_color = Color(0.563626, 0.563626, 0.563626, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7l7mv"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_n87rw")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1154.0
offset_bottom = 649.0
color = Color(0.556863, 0.556863, 0.556863, 0.533333)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -139.0
offset_right = 120.0
offset_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_myx47")
theme_override_styles/hover = SubResource("StyleBoxFlat_kukqi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5d2l8")
theme_override_styles/normal = SubResource("StyleBoxFlat_7l7mv")
text = "Resume"

[node name="restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_myx47")
theme_override_styles/hover = SubResource("StyleBoxFlat_kukqi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5d2l8")
theme_override_styles/normal = SubResource("StyleBoxFlat_7l7mv")
text = "Restart"

[node name="mainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_myx47")
theme_override_styles/hover = SubResource("StyleBoxFlat_kukqi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5d2l8")
theme_override_styles/normal = SubResource("StyleBoxFlat_7l7mv")
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/mainMenu" to="." method="_on_main_menu_pressed"]
